fix for layout shift scrollbar-gutter

--- a/src/main.css
+++ b/src/main.css
@@ -55,6 +55,7 @@
 
 html {
   font-size: 100%;
+  scrollbar-gutter: stable;
 }
 
 body {
